[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Altres/PNG/metalPanel.png" type="Texture" id=1]
[ext_resource path="res://UI/Altres/PNG/metalPanel_blue.png" type="Texture" id=2]
[ext_resource path="res://Botons_torretes.gd" type="Script" id=3]
[ext_resource path="res://Audio/623175__aphom000__button-click-selection.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/422836__gamedevc__g_ui_button_hover_1.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/Altres/PNG/metalPanel_blueCorner.png" type="Texture" id=6]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Botons_torretes" type="VBoxContainer" parent="Control"]
margin_top = 650.0
margin_right = 100.0
margin_bottom = 958.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 3 )

[node name="boto_t1" type="TextureButton" parent="Control/Botons_torretes"]
margin_right = 100.0
margin_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 6 )

[node name="boto_t2" type="TextureButton" parent="Control/Botons_torretes"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 6 )

[node name="boto_t3" type="TextureButton" parent="Control/Botons_torretes"]
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 6 )

[node name="clicar_boto" type="AudioStreamPlayer2D" parent="Control/Botons_torretes"]
position = Vector2( 0, -650 )
stream = ExtResource( 4 )

[node name="soroll_boto" type="AudioStreamPlayer2D" parent="Control/Botons_torretes"]
stream = ExtResource( 5 )

[connection signal="mouse_entered" from="Control/Botons_torretes/boto_t1" to="Control/Botons_torretes" method="_on_boto_t1_mouse_entered"]
[connection signal="pressed" from="Control/Botons_torretes/boto_t1" to="Control/Botons_torretes" method="_on_boto_t1_pressed"]
[connection signal="mouse_entered" from="Control/Botons_torretes/boto_t2" to="Control/Botons_torretes" method="_on_boto_t2_mouse_entered"]
[connection signal="pressed" from="Control/Botons_torretes/boto_t2" to="Control/Botons_torretes" method="_on_boto_t2_pressed"]
[connection signal="mouse_entered" from="Control/Botons_torretes/boto_t3" to="Control/Botons_torretes" method="_on_boto_t3_mouse_entered"]
[connection signal="pressed" from="Control/Botons_torretes/boto_t3" to="Control/Botons_torretes" method="_on_boto_t3_pressed"]
